--- a/Substation Builder/View/SubstationView.xaml
+++ b/Substation Builder/View/SubstationView.xaml
@@ -1,17 +1,13 @@
 ﻿<Page
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Substation_Builder.View" 
-        xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
-        x:Class="Substation_Builder.View.SubstationView"
-      mc:Ignorable="d" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:EnumHelper="clr-namespace:Substation_Builder.Helpers"
+    xmlns:model="clr-namespace:Substation_Builder.Model"
+    x:Class="Substation_Builder.View.SubstationView"
+    mc:Ignorable="d" 
       Title="Substation">
-
-    <Page.DataContext>
-        <vm:DatabaseViewModel/>
-    </Page.DataContext>
 
     <StackPanel>
 
@@ -30,46 +26,37 @@
 
             <StackPanel HorizontalAlignment="Left">
                 <DockPanel>
-                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.Name, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9" FontSize="16" Width="148" HorizontalContentAlignment="Center"/>
+                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
+                    <TextBox Text="{Binding Project.Name, UpdateSourceTrigger=PropertyChanged}" Margin="4,5,4,1" Opacity="0.9" FontSize="16" Width="145" HorizontalContentAlignment="Center"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" Width="135"/>
-                    <ComboBox Text="{Binding Project.SubType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" FontSize="16" Width="148" HorizontalContentAlignment="Center">
-                        <ComboBoxItem Content="Open Air"/>
-                        <ComboBoxItem Content="Switchgear"/>
-                        <ComboBoxItem Content="Recloser"/>
-                    </ComboBox>
+                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:SubType}}}" SelectedValue="{Binding Project.SubType}" Width="145" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" Width="135"/>
-                    <ComboBox Text="{Binding Project.BusType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" FontSize="16" Width="148" HorizontalContentAlignment="Center">
-                        <ComboBoxItem Content="Single Bus"/>
-                        <ComboBoxItem Content="Double Bus"/>
-                    </ComboBox>
+                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BusType}}}" SelectedValue="{Binding Project.BusType}" Width="145" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
                 </DockPanel>
             </StackPanel>
-
         </Border>
 
         <Label Content="System Base" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
         <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
-
             <StackPanel>
-
                 <DockPanel>
-                    <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.MVA, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9" FontSize="16" Width="60" HorizontalAlignment="Left" HorizontalContentAlignment="Center"/>
+                    <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
+                    <TextBox Text="{Binding Project.MVA}" Margin="4,5,4,1" Opacity="0.9" FontSize="16" Width="60" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Stretch"/>
                 </DockPanel>
 
                 <DockPanel>
-                    <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.HighVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9" FontSize="16" Width="60" HorizontalAlignment="Left" HorizontalContentAlignment="Center"/>
+                    <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.HighVoltage}" Width="100" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+
                 </DockPanel>
 
                 <DockPanel>
-                    <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.LowVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9" FontSize="16" Width="60" HorizontalAlignment="Left" HorizontalContentAlignment="Center"/>
+                    <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.LowVoltage}" Width="100" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
                 </DockPanel>
 
             </StackPanel>
