Equipment Modeling Finished

--- a/Substation Builder/View/CTView.xaml
+++ b/Substation Builder/View/CTView.xaml
@@ -29,32 +29,32 @@
 
                 <DockPanel>
                     <Label Content="Name:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalAlignment="Left" MinWidth="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="165"/>
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" MinWidth="50" VerticalContentAlignment="Center" Width="165" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
                 <DockPanel>
                     <Label Content="Description:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalAlignment="Left" MinWidth="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="165"/>
+                    <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" MinWidth="50" VerticalContentAlignment="Center" Width="165" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
                 <DockPanel>
                     <Label Content="Rating:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTRating}}}" SelectedValue="{Binding Rating}" Width="165" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTRating}}}" SelectedValue="{Binding Rating}" Width="165" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
                 <DockPanel>
                     <Label Content="Full Ratio:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTTaps}}}" SelectedValue="{Binding CTR}" Width="165" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTTaps}}}" SelectedValue="{Binding CTR}" Width="165" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
                 <DockPanel>
                     <Label Content="Tapped Ratio:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTTaps}}}" SelectedValue="{Binding Tap}" Width="165" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:CTTaps}}}" SelectedValue="{Binding Tap}" Width="165" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
                 <DockPanel>
                     <Label Content="Polarity:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="105"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Polarity}}}" SelectedValue="{Binding Polarity}" Width="165" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Polarity}}}" SelectedValue="{Binding Polarity}" Width="165" FontSize="16" Margin="0,5,0,0" HorizontalContentAlignment="Center"/>
                 </DockPanel>
 
             </StackPanel>
