--- a/Substation Builder/View/RelayView.xaml
+++ b/Substation Builder/View/RelayView.xaml
@@ -1,15 +1,64 @@
 ﻿<Page x:Class="Substation_Builder.View.RelayView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:EnumHelper="clr-namespace:Substation_Builder.Helpers"
+      xmlns:model="clr-namespace:Substation_Builder.Model"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
       Title="Relay">
 
-    <Grid>
-        <Button Content="TEST RELAY">
-            
-        </Button>
-    </Grid>
+    <!-- Breaker Template -->
+    <StackPanel>
+
+        <StackPanel.Triggers>
+            <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </StackPanel.Triggers>
+
+        <Label Content="Protection Relay" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
+        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+
+            <StackPanel>
+
+                <DockPanel>
+                    <Label Content="Name:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalAlignment="Left" MinWidth="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="220"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Description:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" FontSize="16" Margin="0,5,0,0" HorizontalAlignment="Left" MinWidth="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="220"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Type:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayType}}}" SelectedValue="{Binding Type}" Width="220" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Function:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayFunction}}}" SelectedValue="{Binding Function}" Width="220" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Bus:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Bus}}}" SelectedValue="{Binding Bus}" Width="220" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Position:" Opacity="0.9" FontSize="16" Margin="0,5,0,0" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Right" Width="115"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayPosition}}}" SelectedValue="{Binding Position}" Width="220" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+            </StackPanel>
+        </Border>
+    </StackPanel>
+
+
 </Page>
