--- a/Substation Builder/View/SubstationView.xaml
+++ b/Substation Builder/View/SubstationView.xaml
@@ -11,6 +11,7 @@
 
     <StackPanel>
 
+
         <StackPanel.Triggers>
             <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                 <BeginStoryboard>
@@ -26,40 +27,40 @@
 
             <StackPanel HorizontalAlignment="Left">
                 <DockPanel>
-                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.Name, UpdateSourceTrigger=PropertyChanged}" Margin="4,5,4,1" Opacity="0.9" FontSize="16" Width="145" HorizontalContentAlignment="Center"/>
+                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <TextBox Text="{Binding Project.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,7,4,1" Opacity="0.9" FontSize="16" Width="175" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:SubType}}}" SelectedValue="{Binding Project.SubType}" Width="145" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:SubType}}}" SelectedValue="{Binding Project.SubType}" Width="175" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BusType}}}" SelectedValue="{Binding Project.BusType}" Width="145" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0"/>
+                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BusType}}}" SelectedValue="{Binding Project.BusType}" Width="175" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="High Side PT:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding Project.HighPT}" Width="85" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding Project.HighPTCon}" Width="85" FontSize="16" HorizontalContentAlignment="Center" Margin="5,7,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Low Side PT:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding Project.LowPT}" Width="85" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding Project.LowPTCon}" Width="85" FontSize="16" HorizontalContentAlignment="Center" Margin="5,7,0,0" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="High Side Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.HighVoltage}" Width="100" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                </DockPanel>
+
+                <DockPanel>
+                    <Label Content="Low Side Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
+                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.LowVoltage}" Width="100" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                 </DockPanel>
             </StackPanel>
+
         </Border>
 
-        <Label Content="System Base" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
-        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
-            <StackPanel>
-                <DockPanel>
-                    <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <TextBox Text="{Binding Project.MVA}" Margin="4,5,4,1" Opacity="0.9" FontSize="16" Width="60" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Stretch"/>
-                </DockPanel>
-
-                <DockPanel>
-                    <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.HighVoltage}" Width="100" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
-
-                </DockPanel>
-
-                <DockPanel>
-                    <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Left" Width="135"/>
-                    <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.LowVoltage}" Width="100" FontSize="16" HorizontalContentAlignment="Center" Margin="0,5,0,0" HorizontalAlignment="Left"/>
-                </DockPanel>
-
-            </StackPanel>
-        </Border>
     </StackPanel>
 </Page>
