--- a/Substation Builder/Pages/DatabaseView/CTPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/CTPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Substation_Builder.View.CTView"
+﻿<Page x:Class="Substation_Builder.View.CTPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
