--- a/Substation Builder/Pages/DatabaseView/TheveninPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/TheveninPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Substation_Builder.View.TheveninView"
+﻿<Page x:Class="Substation_Builder.View.TheveninPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,6 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       Title="Thevenin" >
-
     <!-- Thevenin Template -->
     <StackPanel>
 
@@ -19,10 +18,10 @@
                 </BeginStoryboard>
             </EventTrigger>
         </StackPanel.Triggers>
-
         <Label Content="Thevenin" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="22"/>
 
         <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+
             <StackPanel>
 
                 <DockPanel>
@@ -73,7 +72,9 @@
                 </DockPanel>
 
             </StackPanel>
+
         </Border>
+
     </StackPanel>
 
 </Page>
