--- a/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
+++ b/Substation Builder/Pages/DatabaseView/Transformer2Page.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Substation_Builder.View.Transformer2View"
+﻿<Page x:Class="Substation_Builder.View.Transformer2Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
