--- a/Substation Builder/View/DatabaseView.xaml
+++ b/Substation Builder/View/DatabaseView.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Name="metroWindow" x:Class="Substation_Builder.View.DatabaseView"
+﻿<Controls:MetroWindow
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,26 +8,14 @@
                       xmlns:Helpers="clr-namespace:Substation_Builder.Helpers"
                       xmlns:Global="clr-namespace:Substation_Builder"
                       xmlns:Model="clr-namespace:Substation_Builder.Model"
+                      xmlns:System="clr-namespace:Microsoft.VisualBasic;assembly=System"
                       xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
+                      xmlns:local="clr-namespace:Substation_Builder.View" x:Name="Database" x:Class="Substation_Builder.View.DatabaseView"
                       mc:Ignorable="d"
                       Icon="..\Resources\Images\MainPageIcon.jpg"    
-                      Title="Database" ResizeMode="NoResize"
+                      Title="Database" ResizeMode="CanResizeWithGrip"
                       WindowStartupLocation="Manual"
-                      BorderThickness="0" MinWidth="750" MinHeight="500" Width="600" Height="350">
-
-    <Controls:MetroWindow.TitleTemplate>
-        <DataTemplate>
-            <TextBlock Text="{TemplateBinding Content}"
-                   TextTrimming="CharacterEllipsis"
-                   VerticalAlignment="Center"
-                   FontSize="20px" Margin="20,0,0,0"/>
-        </DataTemplate>
-    </Controls:MetroWindow.TitleTemplate>
-
-    <Controls:MetroWindow.DataContext>
-        <vm:DatabaseViewModel/>
-    </Controls:MetroWindow.DataContext>
-
+                      BorderThickness="0" Height="400" Width="700" MinWidth="700" MinHeight="400">
 
     <Controls:MetroWindow.Resources>
         <mah:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
@@ -40,26 +28,34 @@
         <!-- Remove Context Menu for Items in the control-->
         <!-- Incredibly evil as the contextmenu does not share the same datacontext as the treeview so the proxy is employed-->
         <ContextMenu x:Key="RemoveItemContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Delete Item" Command="{Binding Path=Data.RemoveItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="{Binding}"/>
+            <MenuItem Header="Delete Item" Command="{Binding Data.RemoveItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="{Binding}"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddTheveninContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Thevenin" Command="{Binding Path=Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Thevenin"/>
+            <MenuItem Header="Add Thevenin" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Thevenin"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddTransformerContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Transformer" Command="{Binding Path=Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Transformer"/>
+            <MenuItem Header="Add Transformer" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Transformer"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddRelayContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Relay" Command="{Binding Path=Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Relay"/>
+            <MenuItem Header="Add Relay" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Relay"/>
         </ContextMenu>
 
         <ContextMenu x:Key="AddBreakerContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add Breaker" Command="{Binding Path=Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Breaker"/>
+            <MenuItem Header="Add Breaker" Command="{Binding Data.AddItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="Breaker"/>
         </ContextMenu>
-
     </Controls:MetroWindow.Resources>
+
+    <Controls:MetroWindow.TitleTemplate>
+        <DataTemplate>
+            <TextBlock Text="{TemplateBinding Content}"
+                   TextTrimming="CharacterEllipsis"
+                   VerticalAlignment="Center"
+                   FontSize="20px" Margin="20,0,0,0"/>
+        </DataTemplate>
+    </Controls:MetroWindow.TitleTemplate>
 
     <Controls:MetroWindow.Background>
         <ImageBrush ImageSource="..\Resources/Images/Chiyome_Mochizuki.jpg" Opacity="0.25" Stretch="UniformToFill">
@@ -74,14 +70,14 @@
         </ImageBrush>
     </Controls:MetroWindow.Background>
 
-    <Controls:MetroAnimatedSingleRowTabControl x:Name="metroAnimatedSingleRowTabControl">
-        <Controls:MetroTabItem Header="DATABASE" TabIndex="1">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="4*"/>
-                </Grid.ColumnDefinitions>
+        <ScrollViewer>
+            <Viewbox VerticalAlignment="Top">
 
                 <Grid>
                     <Grid.RowDefinitions>
@@ -145,24 +141,14 @@
                     </TreeView>
 
                 </Grid>
-                <Frame Grid.Column="1" x:Name="pagenavigation" NavigationUIVisibility="Hidden" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            </Grid>
-            
-        </Controls:MetroTabItem>
+            </Viewbox>
 
-        <Controls:MetroTabItem Header="THEVENIN"  TabIndex="2">
-            <Button Content="Load" Height="100" Width="75"/>
-        </Controls:MetroTabItem>
+        </ScrollViewer>
+        <Viewbox Grid.Column="1">
+            <Frame x:Name="pagenavigation" NavigationUIVisibility="Hidden" Margin="10"/>
+        </Viewbox>
 
-        <Controls:MetroTabItem Header="TRANSFORMERS" TabIndex="3">
-
-        </Controls:MetroTabItem>
-
-        <Controls:MetroTabItem Header="RELAYS" TabIndex="4"/>
-
-        <Controls:MetroTabItem Header="CTS" TabIndex="5"/>
-
-    </Controls:MetroAnimatedSingleRowTabControl>
+    </Grid>
 
 </Controls:MetroWindow>
     
