--- a/Substation Builder/View/FaultView.xaml
+++ b/Substation Builder/View/FaultView.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="Substation_Builder.View.FaultViewModel"
+﻿<Controls:MetroWindow x:Class="Substation_Builder.View.FaultView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Substation_Builder.View"
         mc:Ignorable="d"
-        Title="FaultViewModel" Height="450" Width="800">
+        Title="Fault View Model" Height="450" Width="800">
 
     
     <Grid>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
