--- a/Substation Builder/View/MainWindowView.xaml
+++ b/Substation Builder/View/MainWindowView.xaml
@@ -5,17 +5,23 @@
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:model="clr-namespace:Substation_Builder.Model"
+                      xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
                       mc:Ignorable="d"
                       Icon="..\Resources\Images\MainPageIcon.jpg"    
-                      Title="Substaion Builder" Height="350" Width="600" ResizeMode="CanResizeWithGrip"
+                      Title="Substaion Builder" Height="554" Width="680" ResizeMode="CanMinimize"
                       WindowStartupLocation="CenterScreen"
-                      BorderThickness="0" MinWidth="600" MinHeight="350" HorizontalAlignment="Center">
+                      BorderThickness="0" HorizontalAlignment="Center">
 
     <Controls:MetroWindow.TitleTemplate>
         <DataTemplate>
             <TextBlock Text="{TemplateBinding Content}" TextTrimming="CharacterEllipsis" VerticalAlignment="Center" FontSize="20px" Margin="20,0,0,0"/>
         </DataTemplate>
     </Controls:MetroWindow.TitleTemplate>
+
+    <Controls:MetroWindow.DataContext>
+        <vm:MainWindowViewModel/>
+    </Controls:MetroWindow.DataContext>
 
     <Controls:MetroWindow.Resources>
         <mah:ToUpperConverter x:Key="ToUpper"/>
@@ -42,7 +48,7 @@
                 <TextBlock DockPanel.Dock="Top" Margin="5" FontSize="12" TextWrapping="Wrap" HorizontalAlignment="Center">
                     <Run FontSize="23" FontFamily="Segoe UI Light">About</Run>
                     <LineBreak/> Written to help lazy people be lazy.<LineBreak/>Not responsible for <Bold>ANY</Bold> mistakes.<LineBreak/>
-                    <Hyperlink Click="Report_Bug">Report</Hyperlink> any bugs or issues found.
+                    <Hyperlink>Report</Hyperlink> any bugs or issues found.
                     <Image Margin="0,20,0,10" Name="AboutImage" Source="..\Resources\Images\AboutImage.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" StretchDirection="UpOnly">
                         <Image.RenderTransform>
                             <TransformGroup>
@@ -55,108 +61,168 @@
                     </Image>
                 </TextBlock>
             </Controls:Flyout>
-
-            <Controls:Flyout Position="Bottom" x:Name="Flyout" MinHeight="100" DataContext="{Binding SelectedItem, ElementName=ListBox}">
-                <DockPanel>
-                    <Button Content="Launch Module" Click="Launch_Click" Padding="5" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="5,5,10,5" Background="{StaticResource AccentColorBrush}"/>
-                    <TextBlock Text="{Binding Path=Value}" FontSize="14" FontFamily="Segoe UI Light" Margin="0,5,0,5" DockPanel.Dock="Top"/>
-                    <TextBlock DockPanel.Dock="Bottom" Margin="0,10,0,2">
-                        <Run Text="Related StackOverflow post:"/>
-                    </TextBlock>
-                    <TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
-                </DockPanel>
-            </Controls:Flyout>
         </Controls:FlyoutsControl>
     </Controls:MetroWindow.Flyouts>
 
-    <Grid x:Name="grid" HorizontalAlignment="Left" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=metroWindow, Mode=OneWay}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
+    <StackPanel>
+        <Viewbox>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-        <Grid x:Name="grid1" Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="45"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+                <Viewbox>
+                    <StackPanel Grid.Column="0" Margin="25,0,40,0">
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
+                        <TextBlock Text="Select Module" FontSize="48" TextAlignment="Center" Padding="0,0,0,10"/>
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_clipboard_edit}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile1" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalTitleAlignment="Center" VerticalAlignment="Center" Command="{Binding DatabaseViewOpenCommand, Mode=OneWay}">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Project Database</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
 
-            <TextBlock Grid.Row="0" Grid.Column="1"  Margin="0,10,5,0" Text="Select Module" FontSize="18" TextAlignment="Center"/>
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile2, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile2, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_camera_flash_off}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile2" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Fault Analysis</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="1">
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile3, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_settings}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile3" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Relay Settings</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
 
-                <Controls:Tile x:Name="tile1" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" Click="DatabaseView">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Project Database</TextBlock>
-                </Controls:Tile>
-                <Controls:Tile x:Name="tile2" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" Click="Fault_Analysis">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Fault Analysis</TextBlock>
-                </Controls:Tile>
-                <Controls:Tile x:Name="tile3" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Relay Settings</TextBlock>
-                </Controls:Tile>
-                <Controls:Tile x:Name="tile4" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">SCADA</TextBlock>
-                </Controls:Tile>
-                <Controls:Tile x:Name="tile5" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Substation Report</TextBlock>
-                </Controls:Tile>
-                <Controls:Tile x:Name="tile6" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Generator Tools</TextBlock>
-                </Controls:Tile>
-            </StackPanel>
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile4, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile4, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_home_people_none}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile4" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">SCADA</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
 
-            <StackPanel x:Name="stackPanel" Grid.Row="1" Grid.Column="0">
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource appbar_clipboard_edit}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource appbar_camera_flash_off}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource appbar_settings}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource  appbar_home_people_none}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource appbar_book_open_writing}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Rectangle Margin="10,5,10,0" Height="{Binding ActualHeight, ElementName=tile1, Mode=OneWay}">
-                    <Rectangle.Fill>
-                        <VisualBrush Visual="{StaticResource appbar_fan_box}" Stretch="Uniform"/>
-                    </Rectangle.Fill>
-                </Rectangle>
-            </StackPanel>
-        </Grid>
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile5, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile5, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_book_open_writing}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile5" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Substation Report</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
 
-        <Image Grid.Column="1" Margin="0,0,8,0" Name="MainPageBackground" Source="..\Resources\Images\MainPageBackground.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleY="1" ScaleX="-1"/>
-                    <SkewTransform AngleY="0" AngleX="0"/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Image.RenderTransform>
-            <Image.OpacityMask>
-                <ImageBrush ImageSource="..\Resources/Images/MainPageBackground.png"/>
-            </Image.OpacityMask>
-        </Image>
+                        <DockPanel>
+                            <Rectangle Margin="0" Height="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" Width="{Binding ActualHeight, ElementName=tile6, Mode=OneWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.8" ScaleY="0.8"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Fill>
+                                    <VisualBrush Visual="{StaticResource appbar_fan_box}" Stretch="Uniform"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Controls:Tile x:Name="tile6" Margin="5" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" VerticalAlignment="Center">
+                                <TextBlock Margin="10,10,15,10" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="26">Generator Tools</TextBlock>
+                            </Controls:Tile>
+                        </DockPanel>
+                    </StackPanel>
+                </Viewbox>
 
-    </Grid>
+                <StackPanel  Grid.Column="1">
+                    <Image Margin="0" Name="MainPageBackground" Source="..\Resources\Images\MainPageBackground.png" 
+                   RenderTransformOrigin="0.5,0.5">
+                        <Image.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform ScaleY="1" ScaleX="-1"/>
+                                <SkewTransform AngleY="0" AngleX="0"/>
+                                <RotateTransform Angle="0"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Image.RenderTransform>
+                        <Image.OpacityMask>
+                            <ImageBrush ImageSource="..\Resources/Images/MainPageBackground.png"/>
+                        </Image.OpacityMask>
+                    </Image>
+                </StackPanel>
+
+            </Grid>
+
+
+        </Viewbox>
+
+        <StatusBar>
+            <StatusBarItem HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Margin="8,0,0,9">
+                <DockPanel Margin="0,0,0,-2">
+                    <TextBlock Text="Current Project : " FontSize="16" Margin="0,0,0,-3" Padding="0"/>
+                    <TextBlock Text="{Binding Project.Name}" FontSize="16"/>
+                </DockPanel>
+            </StatusBarItem>
+        </StatusBar>
+
+    </StackPanel>
+
 </Controls:MetroWindow>
